TODOS

re-order splits to show best case with max.segments < n.data?

2022.4.6

complexity funs handle min segment length.

2022.4.4

new l1 and laplace loss functions.

2022.3.30

comparisons vignette.

max_zero_var computed based on the max estimated variance of all
single data points, which should be zero, but are sometimes small
non-zero values (for example 1e-15 or 1e-13) due to numerical
issues. mean_zero_var used in meanvar_norm loss function to determine
if cost is finite. Segments with an infinite cost best split are not
stored in the container for later splitting.

2022.3.29

meanvar_norm distribution: generalize C++ code to more than one
segment-specific parameter.

2022.3.24

container.str can be list (slow) or multimap (fast).

2022.3.22

warning and suggestion to use weights for runs of identical data.

R code binseg(min.segment.length=3) etc uses min_segment_length
parameter in C++ code.

2022.3.11

new binseg function with distribution=poisson or mean_norm,
weight.vec.

2022.1.24

remove random_set_vec test.rev example which failed on M1.

2021.11.3

binseg_normal_cv does model selection via most frequent number of
segments with minimum validation error (over several random splits).

2021.11.2

break ties in Segment operator< by size (split larger segments first).

binseg_normal gains args is.validation.vec, position.vec in order to
support efficient cross-validation. it now returns list with new
component subtrain.borders (predicted changepoint positions).

get_splits* functions for comparing empirical to best/worst case.

2021.1.6

More comments in binseg_normal.cpp to help potential GSOC students.

2020.10.7

Comment binseg_normal.cpp to explain optimal_cost computation.

Use C++ multiset with operator< instead of multimap/vector.

Use cumsum C++ vector for constant time mean/cost computation for any
split.

Store cost of segments before/after split, pass the cost values to
maybe_add to avoid having to recompute them.
